--- a/journey_aware/mapping/mapping_config.json
+++ b/journey_aware/mapping/mapping_config.json
@@ -24,5 +24,63 @@
       }
     }
   ],
-  "vehicles": []
+  "vehicles": [
+    {
+      "startingTime": 5.0,
+      "maxTime": 700.0,
+      "targetFlow": 1200.0,
+      "spawningMode": "CONSTANT",
+      "maxNumberVehicles": 333,
+      "laneSelectionMode": "BEST",
+      "departSpeed": 0.0,
+      "departSpeedMode": "MAXIMUM",
+      "types": [
+        {
+          "name": "Car",
+          "weight": 1.0
+        }
+      ],
+      "deterministic": true,
+      "pos": 0,
+      "route": "1"
+    },
+    {
+      "startingTime": 5.0,
+      "maxTime": 700.0,
+      "targetFlow": 1200.0,
+      "spawningMode": "CONSTANT",
+      "maxNumberVehicles": 333,
+      "laneSelectionMode": "BEST",
+      "departSpeed": 0.0,
+      "departSpeedMode": "MAXIMUM",
+      "types": [
+        {
+          "name": "Car",
+          "weight": 1.0
+        }
+      ],
+      "deterministic": true,
+      "pos": 0,
+      "route": "2"
+    },
+    {
+      "startingTime": 5.0,
+      "maxTime": 700.0,
+      "targetFlow": 1200.0,
+      "spawningMode": "CONSTANT",
+      "maxNumberVehicles": 333,
+      "laneSelectionMode": "BEST",
+      "departSpeed": 0.0,
+      "departSpeedMode": "MAXIMUM",
+      "types": [
+        {
+          "name": "Car",
+          "weight": 1.0
+        }
+      ],
+      "deterministic": true,
+      "pos": 0,
+      "route": "3"
+    }
+  ]
 }
