--- a/journey_aware/omnetpp/omnetpp_config.json
+++ b/journey_aware/omnetpp/omnetpp_config.json
@@ -6,11 +6,11 @@
       "ipv4AnycastAddress": false
     },
     "routingType": {
-      "CELL_GEOCAST_MBMS": false,
-      "AD_HOC_GEOCAST": false,
-      "CELL_TOPOCAST": false,
       "AD_HOC_TOPOCAST": true,
-      "CELL_GEOCAST": false
+      "AD_HOC_GEOCAST": false,
+      "CELL_GEOCAST": false,
+      "CELL_GEOCAST_MBMS": false,
+      "CELL_TOPOCAST": false
     },
     "protocolType": {
       "UDP": true,
