--- a/journey_aware/scenario_config.json
+++ b/journey_aware/scenario_config.json
@@ -30,7 +30,7 @@
         "ns3": false,
         "omnetpp": false,
         "output": true,
-        "sns": false,
+        "sns": true,
         "sumo": true,
         "phabmacs": false
     }
